--- a/tabs/index.html
+++ b/tabs/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabs</title>
+    <title>Static Tabs</title>
+    <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
+
 <body>
-    
+    <div class="tab-container">
+        <div class="tab-buttons" id="button-container">
+            <button class="tab-button active" onclick="showTab(event, 'Tab1')">Tab 1</button>
+            <button class="tab-button" onclick="showTab(event, 'Tab2')">Tab 2</button>
+            <button class="tab-button" onclick="showTab(event, 'Tab3')">Tab 3</button>
+        </div>
+        <div class="tab-contents" id="content-container">
+            <div class="tab-content active" id="Tab1">
+                This is Tab 1 content.
+            </div>
+            <div class="tab-content" id="Tab2">
+                This is Tab 2 content.
+            </div>
+            <div class="tab-content" id="Tab3">
+                This is Tab 3 content.
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
